--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -5,7 +5,7 @@
 # login-shell=no
 
 app-id=foot
-title=ターミナル
+title= ターミナル
 locked-title=yes
 
 font=NotoSansMono, Regular:size=12
@@ -22,7 +22,7 @@ font-bold-italic=NotoSansMono, Bold Italic
 box-drawings-uses-font-glyphs=no
 dpi-aware=no
 
-# initial-window-size-pixels=700x500  # Or,
+initial-window-size-pixels=1280x720  # Or,
 # initial-window-size-chars=<COLSxROWS>
 
 #initial-window-mode=maximized
@@ -223,7 +223,7 @@ preferred= none
 # cursor-end=End Control+e
 # delete-prev=BackSpace
 # delete-prev-word=Mod1+BackSpace Control+BackSpace
-# delete-next=Delete
+delete-next=Delete
 # delete-next-word=Mod1+d Control+Delete
 # extend-to-word-boundary=Control+w
 # extend-to-next-whitespace=Control+Shift+w
