--- a/sway/control
+++ b/sway/control
@@ -10,6 +10,6 @@ bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ 
 bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-bindsym $mod+F1 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym $mod+F2 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym $mod+F3 exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+#bindsym $mod+F1 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+#bindsym $mod+F2 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+#bindsym $mod+F3 exec pactl set-sink-mute @DEFAULT_SINK@ toggle
