--- a/helixback/languages.toml
+++ b/helixback/languages.toml
@@ -10,8 +10,8 @@ language-server = { command = "asp-language-server"}
 
 [[grammar]]
 name = "clingo"
-source = {git = "https://github.com/nikolasbertrand/tree-sitter-clingo", rev = "1776564ed82f7c2d89dc38a86c68f18c9b863681"}
-#source = {src ="/home/nbertrand/.config/helix/runtime/tree-sitter-clingo"}
+#source = {git = "https://github.com/nikolasbertrand/tree-sitter-clingo"}#, rev = "1776564ed82f7c2d89dc38a86c68f18c9b863681"}
+source = {src ="/home/nbertrand/.config/helix/runtime/tree-sitter-clingo"}
 
 [[language]]
 name = "rust"
