--- a/fcitx5/config
+++ b/fcitx5/config
@@ -1,8 +1,6 @@
 [Hotkey]
 # Enumerate when press trigger key repeatedly
 EnumerateWithTriggerKeys=True
-# Enumerate Input Method Forward
-EnumerateForwardKeys=
 # Skip first input method while enumerating
 EnumerateSkipFirst=False
 # Enumerate Input Method Group Backward
@@ -16,6 +14,9 @@ ActivateKeys=
 
 [Hotkey/AltTriggerKeys]
 0=Shift_L
+
+[Hotkey/EnumerateForwardKeys]
+0=Shift+Henkan
 
 [Hotkey/EnumerateBackwardKeys]
 0=Shift+F12
