--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -5,15 +5,7 @@ file-types = ["lp"]
 comment-token = "%"
 roots = []
 indent = { tab-width = 2, unit = "  "}
-language-server = { command = "/home/nbertrand/LSP/asp-language-server/target/debug/asp-language-server"}
-
-[[grammar]]
-name ="clingo"
-source ={ name= "/home/nbertrand/LSP/asp-language-server" }
-#source = #source = { subpath ="/home/nbertrand/LSP/asp-language-server/target/debug"} 
-
-
-#source = {src ="/home/nbertrand/.config/helix/runtime/tree-sitter-clingo"}
+language-server = { command = "asp-language-server", args = ["--stdio"]}
 
 [[language]]
 name = "rust"
