--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -75,77 +75,78 @@ alpha=0.98
 # background=002b36
 # foreground=839496
 
-[colors]
+
 #########################
 ## KANAGWA ###
 ##################
 [colors]
-#foreground = dcd7ba
-#background = 1f1f28
+foreground = dcd7ba
+background = 1f1f28
 
-#selection-foreground = c8c093
-#selection-background = 2d4f67
+selection-foreground = c8c093
+selection-background = 2d4f67
 
-#regular0 = 090618
-#regular1 = c34043
-#regular2 = 76946a
-#regular3 = c0a36e
-#regular4 = 7e9cd8
-#regular5 = 957fb8
-#regular6 = 6a9589
-#regular7 = c8c093
+regular0 = 090618
+regular1 = c34043
+regular2 = 76946a
+regular3 = c0a36e
+regular4 = 7e9cd8
+regular5 = 957fb8
+regular6 = 6a9589
+regular7 = c8c093
 
-#bright0  = 727169
-#bright1  = e82424
-#bright2  = 98bb6c
-#bright3  = e6c384
-#bright4  = 7fb4ca
-#bright5  = 938aa9
-#bright6  = 7aa89f
-#bright7  = dcd7ba
+bright0  = 727169
+bright1  = e82424
+bright2  = 98bb6c
+bright3  = e6c384
+bright4  = 7fb4ca
+bright5  = 938aa9
+bright6  = 7aa89f
+bright7  = dcd7ba
 
+16 = d33682
 #16       = ffa066
-#17       = ff5d62
-##########################
+17       = ff5d62
+#########################
 # TOKYO NIGHT STORM #####
 ########################
-background=24283b
-foreground=c0caf5
-regular0=1D202F
-regular1=f7768e
-regular2=9ece6a
-regular3=e0af68
-regular4=7aa2f7
-regular5=bb9af7
-regular6=7dcfff
-regular7=a9b1d6
-bright0=414868
-bright1=f7768e
-bright2=9ece6a
-bright3=e0af68
-bright4=7aa2f7
-bright5=bb9af7
-bright6=7dcfff
-bright7=c0caf5
- #Normal/regular colors (color palette 0-7)
- regular0=073642  # black
- regular1=dc322f  # red
- regular2=859900  # green
- regular3=b58900  # yellow
- regular4=268bd2  # blue
- regular5=d33682  # magenta
- regular6=2aa198  # cyan
- regular7=eee8d5  # white
+# background=24283b
+# foreground=c0caf5
+# regular0=1D202F
+# regular1=f7768e
+# regular2=9ece6a
+# regular3=e0af68
+# regular4=7aa2f7
+# regular5=bb9af7
+# regular6=7dcfff
+# regular7=a9b1d6
+# bright0=414868
+# bright1=f7768e
+# bright2=9ece6a
+# bright3=e0af68
+# bright4=7aa2f7
+# bright5=bb9af7
+# bright6=7dcfff
+# bright7=c0caf5
+#  #Normal/regular colors (color palette 0-7)
+#  regular0=073642  # black
+#  regular1=dc322f  # red
+#  regular2=859900  # green
+#  regular3=b58900  # yellow
+#  regular4=268bd2  # blue
+#  regular5=d33682  # magenta
+#  regular6=2aa198  # cyan
+#  regular7=eee8d5  # white
 
-# Bright colors (color palette 8-15)
- bright0=53ee9e #08404f    #bright black
- bright1=e35f5c    #bright red
- bright2=9fb700    #right green
- bright3=d9a400    #right yellow
- bright4=4ba1de    #bright blue
- bright5=dc619d    #bright magenta
- bright6=32c1b6    #bright cyan
- bright7=ffffff    #bright white
+# # Bright colors (color palette 8-15)
+#  bright0=53ee9e #08404f    #bright black
+#  bright1=e35f5c    #bright red
+#  bright2=9fb700    #right green
+#  bright3=d9a400    #right yellow
+#  bright4=4ba1de    #bright blue
+#  bright5=dc619d    #bright magenta
+#  bright6=32c1b6    #bright cyan
+#  bright7=ffffff    #bright white
 
 # dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
