--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -88,7 +88,7 @@ selection-background = 2d4f67
 
 regular0 = 090618
 regular1 = c34043
-regular2 = 76946a
+regular2 = 717c7c #76946a
 regular3 = c0a36e
 regular4 = 7e9cd8
 regular5 = 957fb8
@@ -104,7 +104,7 @@ bright5  = 938aa9
 bright6  = 7aa89f
 bright7  = dcd7ba
 
-16 = d33682
+16 =     E46876
 #16       = ffa066
 17       = ff5d62
 #########################
