--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -104,11 +104,11 @@ bright5  = 938aa9
 bright6  = 7aa89f
 bright7  = dcd7ba
 
-16       = 16161D 
+16       = 16161D #Black 
 #16       = E46876
 #16       = ffa066
-17       = ff5d62
-#########################
+17       = ff5d62 # some red
+# #########################
 # TOKYO NIGHT STORM #####
 ########################
 # background=24283b
