--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,11 +8,13 @@ app-id=foot
 title= ターミナル
 locked-title=yes
 
-font=NotoSansMono, Regular:size=12
-font-bold=NotoSansMono, Bold
-font-italic=NotoSansMono, Italic
-font-bold-italic=NotoSansMono, Bold Italic
-#font-size-adjustment=0.5
+font=HackGen35 Console NFJ, Regular:size=12
+font-bold=HackGen35 Console NFJ, Bold
+# font=NotoSansMono, Regular:size=12
+# font-bold=NotoSansMono, Bold
+# font-italic=NotoSansMono, Italic
+# font-bold-italic=NotoSansMono, Bold Italic
+# #font-size-adjustment=0.5
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
