--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -44,6 +44,16 @@ checkOnSave = { command = "clippy" }
 # name = "python"
 # source = { git = "https://github.com/tree-sitter/tree-sitter-python", rev = "de221eccf9a221f5b85474a553474a69b4b5784d" }
 
-# [[language]]
-# name = "latex"
-# config = { texlab = { build = { onSave = true, forwardSearchAfter = true }, forwardSearch = { executable = "zathura", args = [ "--synctex-forward", "%l:1:%f", "%p" ] }, chktex = { onEdit = true } } }
+[[language]]
+name = "latex"
+
+[language.config.texlab.build]
+onSave = true
+forwardSearchAfter = true
+
+[language.config.texlab.forwardSearch]
+executable = "zathura"
+args = [ "--synctex-forward", "%l:1:%f", "%p" ]
+
+[language.config.texlab.chktex]
+onEdit = true
