--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,5 +1,5 @@
 
-theme = "catpuccin_latte"
+theme = "tokyonight"
 
 [editor]
 line-number = "relative"
@@ -8,7 +8,7 @@ middle-click-paste = true
 auto-completion = true
 auto-format  = true
 completion-replace = true
-text-width = 140
+text-width = 79
 
 [editor.cursor-shape]
 insert = "bar"
@@ -61,15 +61,21 @@ wrap-indicator = ""  # set wrap-indicator to "" to hide it
 wrap-at-text-width = true
 
 [keys.normal]
+K = "hover"
 esc = ["collapse_selection", "keep_primary_selection"]
+#y = ":clipboard-yank"
+#p = ":clipboard-paste-after"
 
 [keys.normal.space]
 w = ":write"
-q = ":quit"
-W = ":wq"
+h = "goto_prev_diag"
+i = "goto_next_diag"
+q = ":buffer-close!"
+r = { n = "rename_symbol" }
+tab = ":buffer-next"
+S-tab = ":buffer-previous"
+c = { l = "toggle_comments" }
+l = ":toggle lsp.display-inlay-hints"
 
-[keys.normal."`"]
-a = "code_action"
-
-[keys.normal."+"]
-g = ":run-shell-command gitui"
+# [keys.normal."+"]
+# g = ":run-shell-command gitui"
