--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -28,21 +28,24 @@ indent = { tab-width = 4, unit = "    " }
 [language.config]
 checkOnSave = { command = "clippy" }
 
-# [[language]]
-# name = "python"
-# scope = "source.python"
-# injection-regex = "python"
-# file-types = ["py"]
-# shebangs = ["python"]
-# roots = []
-# comment-token = "#"
-# language-server = { command = "pylsp" }
-# # TODO: pyls needs utf-8 offsets
-# indent = { tab-width = 4, unit = "    " }
+[[language]]
+name = "python"
+language-server = { command = "pylsp" }
+formatter = { command = "black", args = ["--quiet", "-"] }
+auto-format = true
 
-# [[grammar]]
-# name = "python"
-# source = { git = "https://github.com/tree-sitter/tree-sitter-python", rev = "de221eccf9a221f5b85474a553474a69b4b5784d" }
+[language.config.pylsp.plugins]
+pyflakes = { enabled = false }
+mccabe = { enabled = false }
+pyls_isort = { enabled = false }
+pycodestyle = { enabled = false, maxLineLength = 79 }
+pydocstyle = { enabled = false }
+autopep8 = { enabled = false }
+yapf = { enabled = false }
+flake8 = { enabled = false }
+pylint = { enabled = false }
+ruff = { enabled = true, extendSelect = ["I"] }
+mypy = { enabled = true, live_mode = true, strict = true }
 
 [[language]]
 name = "latex"
