--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -21,10 +21,9 @@ font-bold=HackGen35 Console NFJ, Bold
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
-box-drawings-uses-font-glyphs=no
-dpi-aware=no
-
-initial-window-size-pixels=1280x720  # Or,
+box-drawings-uses-font-glyphs=yes
+dpi-aware=yes
+initial-window-size-pixels=2560x1440  # Or,
 # initial-window-size-chars=<COLSxROWS>
 
 #initial-window-mode=maximized
@@ -33,7 +32,7 @@ initial-window-size-pixels=1280x720  # Or,
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
- bold-text-in-bright=no
+bold-text-in-bright=no
 word-delimiters=,│`|:"'()[]{}<>
 # selection-target=primary
 workers=4
@@ -73,7 +72,7 @@ workers=4
 # alternate-scroll-mode=yes
 
 [colors]
-alpha=0.98
+alpha=0.95
 # background=002b36
 # foreground=839496
 
