--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,8 +8,8 @@ app-id=foot
 title= ターミナル
 locked-title=yes
 
-font=HackGen35 Console NFJ, Regular:size=12
-font-bold=HackGen35 Console NFJ, Bold
+font=HackGen35 Console NF 
+font-bold=HackGen35 Console NF, Bold
 # font=NotoSansMono, Regular:size=12
 # font-bold=NotoSansMono, Bold
 # font-italic=NotoSansMono, Italic
@@ -22,8 +22,8 @@ font-bold=HackGen35 Console NFJ, Bold
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 box-drawings-uses-font-glyphs=yes
-dpi-aware=yes
-initial-window-size-pixels=2560x1440  # Or,
+dpi-aware=no
+initial-window-size-pixels=1280x720  # Or,
 # initial-window-size-chars=<COLSxROWS>
 
 #initial-window-mode=maximized
