update foot settings

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -22,8 +22,8 @@ font-bold=HackGen35 Console NF, Bold
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 box-drawings-uses-font-glyphs=yes
-dpi-aware=no
-initial-window-size-pixels=1280x720  # Or,
+dpi-aware=yes
+initial-window-size-pixels=2560x1400  # Or,
 # initial-window-size-chars=<COLSxROWS>
 
 #initial-window-mode=maximized
