--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,9 +8,10 @@ app-id=foot
 title= ターミナル
 locked-title=yes
 
-font=HackGen35 Console NF 
-font-bold=HackGen35 Console NF, Bold
-# font=NotoSansMono, Regular:size=12
+#font=monospace:size=12
+font=Cascadia Code NF:size=12 
+#font-bold=HackGen35 Console NF, Bold
+#font=NotoSansMono, Regular:size=12
 # font-bold=NotoSansMono, Bold
 # font-italic=NotoSansMono, Italic
 # font-bold-italic=NotoSansMono, Bold Italic
@@ -22,8 +23,8 @@ font-bold=HackGen35 Console NF, Bold
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 box-drawings-uses-font-glyphs=yes
-dpi-aware=yes
-initial-window-size-pixels=2560x1400  # Or,
+dpi-aware=no
+initial-window-size-pixels=1920x1400  # Or,
 # initial-window-size-chars=<COLSxROWS>
 
 #initial-window-mode=maximized
@@ -111,25 +112,25 @@ alpha=0.95
 #17       = ff5d62 # some red
 # #########################
 # TOKYO NIGHT STORM #####
-########################
-background=24283b
-foreground=c0caf5
-regular0=1D202F
-regular1=f7768e
-regular2=9ece6a
-regular3=e0af68
-regular4=7aa2f7
-regular5=bb9af7
-regular6=7dcfff
- regular7=a9b1d6
- bright0=414868
- bright1=f7768e
- bright2=9ece6a
- bright3=e0af68
- bright4=7aa2f7
- bright5=bb9af7
- bright6=7dcfff
- bright7=c0caf5
+# ########################
+# background=24283b
+# foreground=c0caf5
+# regular0=1D202F
+# regular1=f7768e
+# regular2=9ece6a
+# regular3=e0af68
+# regular4=7aa2f7
+# regular5=bb9af7
+# regular6=7dcfff
+#  regular7=a9b1d6
+#  bright0=414868
+#  bright1=f7768e
+#  bright2=9ece6a
+#  bright3=e0af68
+#  bright4=7aa2f7
+#  bright5=bb9af7
+#  bright6=7dcfff
+#  bright7=c0caf5
 #  #Normal/regular colors (color palette 0-7)
 #  regular0=073642  # black
 #  regular1=dc322f  # red
@@ -176,7 +177,7 @@ preferred= none
 # font=<primary font>
 # color=<foreground color>
 # hide-when-typing=no
- border-width=1
+ border-width=0
 # border-color=<csd.color>
 # button-width=26
 # button-color=<background color>
