--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -9,7 +9,8 @@ title= ターミナル
 locked-title=yes
 
 #font=monospace:size=12
-font=Cascadia Code NF:size=12 
+font=HackGen35 Console NFJ:size=12
+#font=Cascadia Mono NF:size=12 
 #font-bold=HackGen35 Console NF, Bold
 #font=NotoSansMono, Regular:size=12
 # font-bold=NotoSansMono, Bold
