update: foot config

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -74,8 +74,8 @@ workers=4
 # alternate-scroll-mode=yes
 
 [colors]
-alpha=0.95
-# background=002b36
+#alpha=0.95
+background=000000
 # foreground=839496
 
 
