--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -12,9 +12,11 @@ language-servers = ["asp-language-server"]
 [[language]]
 name = "python"
 language-servers = ["pylsp" ]
-formatter = { command = "black", args = ["--quiet", "-"] }
+formatter = { command = "ruff", args = ["--quiet", "-"] }
 auto-format = true
 
+[language-server.pylsp.config.pylsp]
+plugins.ruff.enabled = true
 # [language.pylsp.plugins]
 # pyflakes = { enabled = false }
 # mccabe = { enabled = false }
